# pumpmarket.fun

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DESIGN_REFRESH.md  FEATURES.md  GET_STARTED.md  IMAGE_AND_TRADING_UX.md  LICENSE  LMSR_MIGRATION.md  PLATFORM_WALLET.md  PROGRAM_ID.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  SOCIAL_FEATURES.md  SWITCHBOARD_INTEGRATION.md  TESTING.md  UX_UPGRADE.md  WALLET_FIX.md  btc-feed.json  package-lock.json  package.json  setup-oracle.js  supabase-schema.sql  tailwind.config.ts  test-feed.js  test-market-resolution.js  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.next/: trace  trace-build
.next/cache/: .previewinfo  .rscinfo
.next/types/: routes.d.ts  validator.ts
app/: .env.example  add-market-accounts-fetch.js  debug-dashboard.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  test-supabase.js  tsconfig.json
docs/: home-perf.sql  live-micro-markets.sql  live-sessions.md  migration-feed-thumbnail.sql  migration-feed-video.sql  migration-flash-crypto-constraints.sql  migration-profile-bio.sql  migration-profile-follows.sql  rapidapi-setup.md  sports-events-2.sql  sports-events-3.sql  sports-events.sql
programs/funmarket-pump/: Cargo.toml
programs/funmarket-pump/src/: chainlink.rs  lib.rs  lib.rs.backup  math.rs  math_lmsr.rs
scripts/: check-market-balance.mjs  deploy.sh  init-user.sh  migrateBase64ImagesToStorage.ts  test-banned-words.sh  test-program.ts
tests/: funmarket-pump.ts
traffic-vision-worker/: api.py  config.py  counter.py
(+257 files in other folders)
