[package]
name = "funmarket-pump"
version = "0.1.0"
description = "Funmarket.pump - Prediction markets with bonding curves on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "funmarket_pump"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
