[package]
name = "funmarket-pump"
version = "0.1.0"
description = "Funmarket.pump - Prediction markets with bonding curves on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "funmarket_pump"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
switchboard-v2 = "0.5.0"
