[package]
name = "funmarket-pump"
version = "0.1.0"
description = "Funmarket.pump - Prediction markets with bonding curves on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "funmarket_pump"

[features]
default = []
cpi = ["no-entrypoint"]

no-entrypoint = []
no-idl = []
no-log-ix-name = []

# Anchor IDL build
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# Options to silence the cfg warnings (and allow heap/panic toggles)
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"